--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.3",
     "typescript": "5.0.4"
   }
 }
